2009-02-24  Cosimo Cecchi  <cosimoc@gnome.org>

	* Makefile.am: add gthread CFLAGS and LIBS (#572985).

2009-02-04  Vincent Untz  <vuntz@gnome.org>

	* gtkmessagearea.c: add an include to fix warnings
	* logview-log.c: (read_gzip_header):
	* logview-manager.c: (logview_manager_get_if_loaded): return something.
	Part of bug #570422.

2009-01-30  Cosimo Cecchi  <cosimoc@gnome.org>

	* logview-loglist.c: (tree_selection_changed_cb),
	(manager_active_changed_cb): make sure we check for day != NULL
	before emitting "day-selected". Hopefully fixes bug #569807.

2009-01-30  Cosimo Cecchi  <cosimoc@gnome.org>

        * logview-log.c:
        (logview_log_init):
        (log_load):
        (logview_log_get_has_days):
        * logview-log.h:
        * logview-loglist.c:
        (update_days_and_lines_for_log):
        (manager_log_added_cb):
        * logview-window.c:
	Check if there are some lines before actually adding an entry
	to the loglist. This implies adding some API to LogviewLog.
	Closes bug #567170.

2009-01-29  Cosimo Cecchi  <cosimoc@gnome.org>

        * tests/Makefile.am: don't install the test reader program.

2009-01-26  Cosimo Cecchi  <cosimoc@gnome.org>

        * logview-main.c:
        (main): call g_thread_init () before any other GLib function.

2009-01-09  Cosimo Cecchi  <cosimoc@gnome.org>

	* data/Makefile.am: Correctly install gconf schemas.

2009-01-08  Cosimo Cecchi  <cosimoc@gnome.org>

	* Makefile.am:
	* data/Makefile.am:
	* tests/test-reader.c:
	Fix make distcheck.

2008-12-28  Cosimo Cecchi  <cosimoc@gnome.org>

	* logview-manager.c (create_log_cb): remove the use of an unallocated
	pointer, which would lead to segfaults.
	Patch by Frederic Peters (#565827).

2008-12-24  Cosimo Cecchi  <cosimoc@gnome.org>

	* logview-log.c (log_load):
	* logview-log.h:
	Set a meaningful error message if we can't read from the log file
	(#349756).

2008-12-23  Cosimo Cecchi  <cosimoc@gnome.org>

	* logview-window.c: handle keypad shortcuts (#441564).
